feat: participants to employees
