# Back/src/routes/participants.js
@@ -1,10 +1,0 @@
-const participantsController = require('../controllers/participants');
-
-module.exports = (app) => {
-    app.get('/participants', participantsController.getAll);
-    app.post('/participants', participantsController.post);
-    app.delete('/participants/:id', participantsController.destroy);
-    app.put('/participants/:id', participantsController.put);
-    app.patch('/participants/:id', participantsController.patch);
-    app.get('/participants/:id', participantsController.getById);
-}
